# golem-ai

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yaml
stt/aws/: Cargo.toml
stt/azure/: Cargo.toml
stt/azure/src/: client.rs
stt/deepgram/: Cargo.toml
stt/deepgram/src/: client.rs
stt/google/: Cargo.toml
stt/google/src/: client.rs
stt/stt/: Cargo.toml
stt/whisper/: Cargo.toml
test/stt/: Cargo.toml
test/stt/components-rust/test-helper/: Cargo.toml
test/stt/components-rust/test-stt/: Cargo.toml
test/stt/components-rust/test-stt/src/: comprehensive_tests.rs  lib.rs  provider_integration.rs
test/tts/: golem.yaml
test/tts/components-rust/test-tts/: Cargo.toml  golem.yaml
test/tts/components-rust/test-tts/src/: lib.rs
test/tts/components-rust/test-tts/wit/: world.wit
test/tts/wit/: test-tts.wit
tts/: HOW_TO_RUN_TTS.md  Makefile.toml  README.md
tts/deepgram/: Cargo.toml
tts/deepgram/src/: client.rs  conversions.rs  lib.rs  streaming.rs
tts/deepgram/wit/: world.wit
tts/elevenlabs/: Cargo.toml
tts/elevenlabs/src/: client.rs  conversions.rs  lib.rs  voice_cloning.rs
tts/elevenlabs/wit/: world.wit
tts/google/: Cargo.toml
tts/google/src/: auth.rs  client.rs  conversions.rs  lib.rs
tts/google/wit/: world.wit
tts/polly/: Cargo.toml
tts/polly/src/: advanced.rs  client.rs  conversions.rs  lib.rs
tts/polly/wit/: world.wit
tts/tts/: Cargo.toml
tts/tts/src/: cache.rs  config.rs  durability.rs  error.rs  guest.rs  http.rs  lib.rs  retry.rs
