[package]
name = "test_helper"
version = "0.0.0"
edition = "2021"

[workspace]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
# To use common shared libs, use the following:
# common-lib = { path = "../../common-rust/common-lib" }

golem-rust = "0.3.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen-rt = "0.33"

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.bindings.with]

[package.metadata.component.target.dependencies]
"test:helper-exports" = { path = "wit-generated/deps/test_helper-exports" }

[package.metadata.component.bindings]
# See https://github.com/bytecodealliance/cargo-component/blob/main/src/metadata.rs#L62

# derives = ["serde::Serialize", "serde::Deserialize"]
# generate_unused_types = true