[package]
name = "test_stt"
version = "0.0.1"
edition = "2021"

[workspace]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[features]
default = []
aws = []
azure = []
deepgram = []
google = []
whisper = []

[dependencies]
golem-rust = "=1.5.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen-rt = "0.40.0"

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.target.dependencies]
"wasi:io" = { path = "wit-generated/deps/io" }
"wasi:clocks" = { path = "wit-generated/deps/clocks" }
"golem:rpc" = { path = "wit-generated/deps/golem-rpc" }
"golem:stt" = { path = "wit-generated/deps/golem-stt" }
"test:helper-client" = { path = "wit-generated/deps/test_helper-client" }
"test:stt-exports" = { path = "wit-generated/deps/test_stt-exports" }

[package.metadata.component.bindings]


