[package]
name = "test-tts"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.38.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "test:tts"

[package.metadata.component.target]
path = "../../wit"

[package.metadata.component.target.dependencies]
"golem:tts" = { path = "../../wit/deps/golem-tts" }
